--- a/Randomizer/Randomizer.iOS/Randomizer.iOS.csproj
+++ b/Randomizer/Randomizer.iOS/Randomizer.iOS.csproj
@@ -223,6 +223,10 @@
       <Project>{4f38e398-edb3-4bc2-a33c-dbec273c1fd6}</Project>
       <Name>Randomizer.Framework.Controls</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj">
+      <Project>{2ae44201-2368-4d3a-9f76-e85912b20112}</Project>
+      <Name>Randomizer.Framework.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Randomizer\Randomizer.csproj">
       <Project>{3722FBFC-9C51-490B-8178-519395C4E0D5}</Project>
       <Name>Randomizer</Name>
