- Removed forced language test - Added an alert service that uses translations when possible

--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
@@ -136,5 +136,17 @@
       <DependentUpon>TextResources.resx</DependentUpon>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Shared\Alerts\AlertsService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Shared\Alerts\IAlertsService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Shared\Navigation\ShellNavigationService.cs" />
+  </ItemGroup>
   
 </Project>
