--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
@@ -12,7 +12,7 @@
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
 
     <!--The frameworks we're targeting-->
-    <TargetFrameworks>MonoAndroid90;Xamarin.iOS10;netstandard2.0;</TargetFrameworks>
+    <TargetFrameworks>MonoAndroid90;Xamarin.iOS10;netstandard2.0;net461</TargetFrameworks>
 
     <!--Assembly and Namespace info -->
     <RootNamespace>Randomizer.Framework.Services</RootNamespace>
