-Created VieWModelLocatorClass to initialize containers -Modified ViewModel classes to use dependency injection -Created mock classes for services

--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
@@ -138,15 +138,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Shared\Alerts\AlertsService.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="Shared\Alerts\IAlertsService.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Shared\Navigation\ShellNavigationService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Shared\Navigation\NavigationMockService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Shared\Alerts\AlertsMockService.cs" />
   </ItemGroup>
   
 </Project>
