--- a/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
   </ItemGroup>
 
