Created MessagingCenterExtensions class to subscribe be able to uniquely subscribe to MessagingCenter messages

--- a/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
     <ProjectReference Include="..\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
     <ProjectReference Include="..\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
+    <ProjectReference Include="..\Randomizer.Framework.Utils\Randomizer.Framework.Utils.csproj" />
   </ItemGroup>
 
 </Project>
