--- a/App/Randomizer/Randomizer.csproj
+++ b/App/Randomizer/Randomizer.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />  
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
@@ -19,9 +19,10 @@
     <ProjectReference Include="..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.ApiManager\EnigmatiKreations.Framework.ApiManager.csproj" />
     <ProjectReference Include="..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Controls\EnigmatiKreations.Framework.Controls.csproj" />
     <ProjectReference Include="..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Persistence\EnigmatiKreations.Framework.Persistence.csproj" />
-    <ProjectReference Include="..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Services\EnigmatiKreations.Framework.Services.csproj" />
     <ProjectReference Include="..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Utils\EnigmatiKreations.Framework.Utils.csproj" />
     <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
+    <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
+    <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
     <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ViewModels\Randomizer.Framework.ViewModels.csproj" />
   </ItemGroup>
 
