--- a/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
+++ b/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
@@ -211,7 +211,7 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>3.4.3</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.TestCloud.Agent">
       <Version>0.21.9</Version>
@@ -223,9 +223,9 @@
       <Project>{4f38e398-edb3-4bc2-a33c-dbec273c1fd6}</Project>
       <Name>EnigmatiKreations.Framework.Controls</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Services\EnigmatiKreations.Framework.Services.csproj">
+    <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj">
       <Project>{2ae44201-2368-4d3a-9f76-e85912b20112}</Project>
-      <Name>EnigmatiKreations.Framework.Services</Name>
+      <Name>Randomizer.Framework.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Randomizer\Randomizer.csproj">
       <Project>{3722FBFC-9C51-490B-8178-519395C4E0D5}</Project>
