--- a/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Moq" Version="4.14.5" />
+    <PackageReference Include="Moq" Version="4.14.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -21,7 +21,8 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Services\EnigmatiKreations.Framework.Services.csproj" />
+    <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
+    <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ViewModels\Randomizer.Framework.ViewModels.csproj" />
     <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.CommonTestData.csproj" />
   </ItemGroup>
