--- a/Tests/Randomizer.UITests/Randomizer.UITests.csproj
+++ b/Tests/Randomizer.UITests/Randomizer.UITests.csproj
@@ -38,14 +38,14 @@
     <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Services\EnigmatiKreations.Framework.Services.csproj">
-      <Project>{2ae44201-2368-4d3a-9f76-e85912b20112}</Project>
-      <Name>EnigmatiKreations.Framework.Services</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="HomePageUITests.cs" />
     <Compile Include="AppInitializer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj">
+      <Project>{2ae44201-2368-4d3a-9f76-e85912b20112}</Project>
+      <Name>Randomizer.Framework.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
