--- a/Tests/Randomizer.Tests/Randomizer.Tests.Persistence/Randomizer.Tests.Persistence.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.Persistence/Randomizer.Tests.Persistence.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
