--- a/Tests/Randomizer.Tests/Randomizer.Tests.Persistence/Randomizer.Tests.Persistence.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.Persistence/Randomizer.Tests.Persistence.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
