--- a/Tests/Randomizer.Tests/Randomizer.Tests.Model/Randomizer.Tests.Model.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.Model/Randomizer.Tests.Model.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
-    <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.CommonTestData.csproj" />
+    <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
