--- a/Tests/Randomizer.Tests/Randomizer.Tests.Persistence/Randomizer.Tests.Persistence.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.Persistence/Randomizer.Tests.Persistence.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
+    <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
