--- a/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
@@ -24,7 +24,7 @@
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ViewModels\Randomizer.Framework.ViewModels.csproj" />
-    <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.CommonTestData.csproj" />
+    <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
