Modified tests and make all of them pass.
Dev needs to be restarted.

Fixes #10

--- a/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Persistence\EnigmatiKreations.Framework.Persistence.csproj" />
     <ProjectReference Include="..\..\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Utils\EnigmatiKreations.Framework.Utils.csproj" />
     <ProjectReference Include="..\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
+    <ProjectReference Include="..\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
     <ProjectReference Include="..\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
   </ItemGroup>
 
