--- a/Tests/Randomizer.Tests/Randomizer.Tests.CommonTestData/Randomizer.Tests.Common.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.CommonTestData/Randomizer.Tests.Common.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
+    <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ViewModels\Randomizer.Framework.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
