--- a/App/Targets/Randomizer.iOS/Info.plist
+++ b/App/Targets/Randomizer.iOS/Info.plist
@@ -5,7 +5,6 @@
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
-		<integer>2</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -22,11 +21,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>14.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>Randomizer</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.ClubInfo.Randomizer</string>
+	<string>com.EnigmatiKreations.Randomizer</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CFBundleName</key>
@@ -37,14 +36,14 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>XSLaunchImageAssets</key>
 	<string>Assets.xcassets/LaunchImage.launchimage</string>
-  <key>CFBundleLocalizations</key>
-  <array>
-    <string>en</string>
-    <string>es</string>
-    <string>fr</string>
-    <string>nl</string>
-  </array>
-  <key>CFBundleDevelopmentRegion</key>
-  <string>en</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>es</string>
+		<string>fr</string>
+		<string>nl</string>
+	</array>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
 </dict>
 </plist>
