--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Persistence/Randomizer.Framework.Persistence.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Persistence/Randomizer.Framework.Persistence.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
