--- a/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ViewModels\Randomizer.Framework.ViewModels.csproj" />
     <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.Common.csproj" />
+    <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Pages\Randomizer.Framework.Pages.csproj" />
   </ItemGroup>
 
 </Project>
