--- a/Tests/Randomizer.Tests.Integration/Randomizer.Tests.Integration.PageViewModels/Randomizer.Tests.Integration.PageViewModels.csproj
+++ b/Tests/Randomizer.Tests.Integration/Randomizer.Tests.Integration.PageViewModels/Randomizer.Tests.Integration.PageViewModels.csproj
@@ -1,12 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
-
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
@@ -26,8 +24,15 @@
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.ViewModels\Randomizer.Framework.ViewModels.csproj" />
-    <ProjectReference Include="..\Randomizer.Tests.CommonTestData\Randomizer.Tests.Common.csproj" />
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Pages\Randomizer.Framework.Pages.csproj" />
+    <ProjectReference Include="..\..\Randomizer.Tests\Randomizer.Tests.CommonTestData\Randomizer.Tests.Common.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Content Include=".\xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  
 </Project>
