Progress with themes

--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/Randomizer.Framework.Pages.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/Randomizer.Framework.Pages.csproj
@@ -36,4 +36,10 @@
   <ItemGroup>
     <Folder Include="Navigation\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
