Themes are now working

--- a/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/EnigmatiKreations.Framework.Controls.csproj
+++ b/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/EnigmatiKreations.Framework.Controls.csproj
@@ -113,12 +113,26 @@
     <None Remove="Platforms\Android\Shell\RandomizerShellRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Update="Shared\Themes\LightTheme.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Shared\Themes\DarkTheme.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Shared\Themes\Templates.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Shared\Themes\Themes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Shared\Themes\LightTheme.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+    <Compile Update="Shared\Themes\DarkTheme.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
