--- a/Controls Gallery/ControlsGallery/ControlsGallery.iOS/ControlsGallery.iOS.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery.iOS/ControlsGallery.iOS.csproj
@@ -128,6 +128,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Controls\EnigmatiKreations.Framework.Controls.csproj">
+      <Project>{4f38e398-edb3-4bc2-a33c-dbec273c1fd6}</Project>
+      <Name>EnigmatiKreations.Framework.Controls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ControlsGallery\ControlsGallery.csproj">
       <Project>{C8AA41E6-DDD4-4B46-9172-356EE210AB01}</Project>
       <Name>ControlsGallery</Name>
