--- a/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="CardsView" Version="2.7.0" />
   </ItemGroup>
 
   <ItemGroup>
