--- a/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    
   </PropertyGroup>
 
   <ItemGroup>
