--- a/Tests/Randomizer.Tests.Integration/Randomizer.Tests.Integration.PageViewModels/Randomizer.Tests.Integration.PageViewModels.csproj
+++ b/Tests/Randomizer.Tests.Integration/Randomizer.Tests.Integration.PageViewModels/Randomizer.Tests.Integration.PageViewModels.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="Xamarin.Forms.Mocks" Version="4.7.0.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -29,6 +29,15 @@
   </ItemGroup>
 
 
+  <ItemGroup>
+    <PackageReference Include="OpenTK" Version="3.0.1">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
+    <PackageReference Include="OpenTK.GLControl" Version="3.0.1">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
+  </ItemGroup>
+  
   <ItemGroup>
     <Content Include=".\xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
