--- a/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
+++ b/Tests/Randomizer.Tests/Randomizer.Tests.ViewModels/Randomizer.Tests.ViewModels.csproj
@@ -11,12 +11,25 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="Xamarin.Forms.Mocks" Version="4.7.0.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <!--
+  This should be removed once following issue gets solved:
+  https://github.com/xamarin/XamarinCommunityToolkit/issues/985
+  -->
+  <ItemGroup>
+    <PackageReference Include="OpenTK" Version="3.0.1">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
+    <PackageReference Include="OpenTK.GLControl" Version="3.0.1">
+      <NoWarn>NU1701</NoWarn>
     </PackageReference>
   </ItemGroup>
 
