--- a/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
+++ b/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
@@ -200,6 +200,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms.Svg">
+      <Version>1.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.TestCloud.Agent">
       <Version>0.22.2</Version>
     </PackageReference>
