--- a/Controls Gallery/ControlsGallery/ControlsGallery.Android/ControlsGallery.Android.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery.Android/ControlsGallery.Android.csproj
@@ -57,6 +57,9 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="CardsView" Version="2.8.0" />
+    <PackageReference Include="Xamarin.Forms.Svg">
+      <Version>1.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
