--- a/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
@@ -13,10 +13,33 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\SVG\check.svg" />
+    <None Remove="Resources\SVG\close-circle.svg" />
+    <None Remove="Resources\SVG\cog.svg" />
+    <None Remove="Resources\SVG\delete.svg" />
+    <None Remove="Resources\SVG\home.svg" />
+    <None Remove="Resources\SVG\information.svg" />
+    <None Remove="Resources\SVG\pencil.svg" />
+    <None Remove="Resources\SVG\plus.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\SVG\check.svg" />
+    <EmbeddedResource Include="Resources\SVG\close-circle.svg" />
+    <EmbeddedResource Include="Resources\SVG\cog.svg" />
+    <EmbeddedResource Include="Resources\SVG\delete.svg" />
+    <EmbeddedResource Include="Resources\SVG\home.svg" />
+    <EmbeddedResource Include="Resources\SVG\information.svg" />
+    <EmbeddedResource Include="Resources\SVG\pencil.svg" />
+    <EmbeddedResource Include="Resources\SVG\plus.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="CardsView" Version="2.8.0" />
+    <PackageReference Include="Xamarin.Forms.Svg" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
