Using SVG everywhere

--- a/Controls Gallery/ControlsGallery/ControlsGallery.iOS/ControlsGallery.iOS.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery.iOS/ControlsGallery.iOS.csproj
@@ -123,6 +123,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Forms9Patch">
+      <Version>2.4.9</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="CardsView" Version="2.8.0" />
