--- a/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/ControlsGallery.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Forms9Patch" Version="2.4.9" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
