--- a/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
+++ b/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
@@ -232,75 +232,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\check_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\check_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\check_white%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\closed_circle_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\closed_circle_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\closed_circle_white%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\delete_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\delete_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\delete_white%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\edit_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\edit_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\edit_white%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\home_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\home_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\home_white%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\information_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\information_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\information_white%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\plus_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\plus_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\plus_white%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\settings_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\settings_white%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\settings_white%403x.png" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 </Project>
