--- a/App/Randomizer/Randomizer.csproj
+++ b/App/Randomizer/Randomizer.csproj
@@ -38,6 +38,7 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />  
+    <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="1.1.4" />  
     <PackageReference Include="Xamarin.Forms.Svg" Version="1.0.3" />
   </ItemGroup>
 
