--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/Randomizer.Framework.Pages.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/Randomizer.Framework.Pages.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="1.1.4" />
     <PackageReference Include="Xamarin.Forms.Svg" Version="1.0.3" />
   </ItemGroup>
 
